--- a/plgame/package.json
+++ b/plgame/package.json
@@ -30,8 +30,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint": "^6.1.0",
-    "eslint-plugin-react": "^7.14.3"
-  }
+  "devDependencies": {}
 }
